# tomoacquire

./: .gitignore  README.md  setup.cfg  setup.py
conda/: conda.yaml
scripts/: 01_tutorial.ipynb  02_tutorial.ipynb  connection_test.ipynb
tomoacquire/: __init__.py  config.py  hooks.py  microscope_config.py  microscopes.json  registration.py  registrations.py  scanwindow.py  states.py
tomoacquire/controllers/: Imaging.py  base.py  connection.py  controller.py  experiment.py  main.py
tomoacquire/controllers.py/: acquisition.py  base.py  experiment.py  stage.py
tomoacquire/controllers/experiments/: tomography.py
tomoacquire/devices/: FEI.py  FEI_old.py  base.py  fei_temscript.py  temscript.py
tomoacquire/microscopes/: FEI.py  Titan_1.json  experiment.py  temscript.py
tomoacquire/napari/: __init__.py  base.py
tomoacquire/napari/layer_widgets/: __init__.py  scanwindow.py
tomoacquire/napari/processes/: __init__.py  experiment.py  instrument.py
tomoacquire/plugins/: hooks.py
tomoacquire/plugins/tiltschemes/: __init__.py  binary.py  grs.py  incremental.py  tiltscheme.py
tomoacquire/setting/: FEI.py  connect.py
tomoacquire/views/: __init__.py  connect.py  connection.py  experiment.py  scansettings.py
tomogui/: dummy.py  logs.py  main.py  titan.py
tomogui/controllers/: base.py  calibration.py  experiment.py  microscope.py
tomogui/models/: base.py  calibration.py  experiment.py  imaging.py  tilting.py
tomogui/views/: base.py  calibration.py  experiment.py  imaging.py  logger.py  tilting.py
