[metadata]
name = tomoacquire
version = attr: tomoacquire.__version__
license = None
author = Wouter Heyvaert
author_email = wouter.heyvaert@hotmail.com
description = Collection of utilities for working with electron tomography data, microscopy images and multidimensional processing.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/EMAT-tomography/tomotools
project_urls =
    Bug Tracker = https://github.com/EMAT-tomography/tomotools/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = tomoacquire
python_requires = >=3.10
install_requires =
    numpy
    matplotlib
    scipy
    imageio
    progress

