[metadata]
name = tomoacquire
version = attr: tomoacquire.__version__
license = GPL3.0
author = Timothy Craig
author_email = tcraig258@gmail.com
description = Collection of utilities for working with electron tomography data, microscopy images and multidimensional processing.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Tcraig088/tomoacquire
project_urls =
    Bug Tracker = https://github.com/Tcraig088/tomoacquire/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = tomoacquire
python_requires = >=3.10


